docs(swagger): added users api documentation
