# golang/pkg/request/users/user_types.go
@@ -2,10 +2,9 @@ package users
 
 type (
 	RegisterRequest struct {
-		Name     string `json:"name" validate:"required"`
-		Phone    string `json:"phone" validate:"required"`
-		Password string `json:"password"`
-		Role     string `json:"role" validate:"required"`
+		Name  string `json:"name" validate:"required"`
+		Phone string `json:"phone" validate:"required"`
+		Role  string `json:"role" validate:"required"`
 	}
 
 	RegisterResponse struct {
